--- a/inventory-service/src/main/resources/application-docker.properties
+++ b/inventory-service/src/main/resources/application-docker.properties
@@ -1,5 +1,5 @@
 # Application
-spring.application.name=order-service
+spring.application.name=inventory-service
 server.port=${SERVER_PORT}
 
 # MySQL
