--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,3 +62,12 @@ services:
       SERVER_PORT: 8081
     ports:
       - 8081:8081
+
+  discovery-service:
+    image: discovery-service-image
+    container_name: discovery-service-container
+    environment:
+      SPRING_PROFILES_ACTIVE: docker
+      SERVER_PORT: 8761
+    ports:
+      - 8761:8761
