--- a/order-service/src/main/resources/application-docker.properties
+++ b/order-service/src/main/resources/application-docker.properties
@@ -9,3 +9,6 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddlAuto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+
+# Spring Cloud Eureka client
+eureka.client.service-url.defaultZone=http://discovery-service:8761/eureka
