--- a/order-service/src/main/resources/application-docker.properties
+++ b/order-service/src/main/resources/application-docker.properties
@@ -1,6 +1,6 @@
 # Application
 spring.application.name=order-service
-server.port=${SERVER_PORT}
+server.port=0
 
 # MySQL
 spring.datasource.url=${SPRING_DATASOURCE_URL}
