--- a/notification-service/pom.xml
+++ b/notification-service/pom.xml
@@ -11,10 +11,10 @@
     </parent>
 
     <groupId>pl.amilosh</groupId>
-    <artifactId>order-servicce</artifactId>
+    <artifactId>notification-servicce</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>order-service</name>
-    <description>Order Service</description>
+    <name>notification-service</name>
+    <description>Notification Service</description>
 
     <properties>
         <java.version>17</java.version>
@@ -42,15 +42,6 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
@@ -60,15 +51,6 @@
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
             <version>${mapstruct.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webflux</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-collections4</artifactId>
-            <version>4.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
