--- a/order-service/src/main/resources/application-docker.properties
+++ b/order-service/src/main/resources/application-docker.properties
@@ -12,3 +12,10 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 # Spring Cloud Eureka client
 eureka.client.service-url.defaultZone=http://discovery-service:8761/eureka
+
+# Kafka
+spring.kafka.bootstrap-servers=kafka:29092
+spring.kafka.template.default-topic=notificationTopic
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.type.mapping=event:pl.amilosh.orderservice.event.OrderSavedEvent
