--- a/inventory-service/src/main/resources/application-docker.properties
+++ b/inventory-service/src/main/resources/application-docker.properties
@@ -12,3 +12,6 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 # Spring Cloud Eureka client
 eureka.client.service-url.defaultZone=http://discovery-service:8761/eureka
+
+# Spring Boot Actuator
+management.endpoints.web.exposure.include=prometheus
