--- a/discovery-service/src/main/resources/application-docker.properties
+++ b/discovery-service/src/main/resources/application-docker.properties
@@ -6,3 +6,6 @@ server.port=${SERVER_PORT}
 eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+
+# Spring Boot Actuator
+management.endpoints.web.exposure.include=prometheus
