--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,13 @@ services:
     image: mysql:8.3
     container_name: order-service-mysql-container
     restart: always
-    ports:
-      - 3306:3306
     environment:
       MYSQL_DATABASE: order_service
       MYSQL_USER: order_service_username
       MYSQL_PASSWORD: order_service_password
       MYSQL_ROOT_PASSWORD: root
+    ports:
+      - 3306:3306
     volumes:
       - order-service-mysql-volume:/var/lib/mysql
 
@@ -38,13 +38,13 @@ services:
     image: mysql:8.3
     container_name: inventory-service-mysql-container
     restart: always
-    ports:
-      - 3307:3306
     environment:
       MYSQL_DATABASE: inventory_service
       MYSQL_USER: inventory_service_username
       MYSQL_PASSWORD: inventory_service_password
       MYSQL_ROOT_PASSWORD: root
+    ports:
+      - 3307:3306
     volumes:
       - inventory-service-mysql-volume:/var/lib/mysql
 
@@ -116,3 +116,30 @@ services:
       - kafka
     environment:
       SPRING_PROFILES_ACTIVE: docker
+
+  prometheus:
+    image: prom/prometheus:v2.50.1
+    container_name: prometheus-container
+    restart: always
+    depends_on:
+      - order-service
+      - inventory-service
+      - notification-service
+    ports:
+      - 9090:9090
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+
+  grafana:
+    image: grafana/grafana-oss:10.0.12
+    container_name: grafana-container
+    restart: always
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=password
+    links:
+      - prometheus:prometheus
+    ports:
+      - 3000:3000
+    volumes:
+      - ./grafana:/var/lib/grafana
