--- a/notification-service/src/main/resources/application-docker.properties
+++ b/notification-service/src/main/resources/application-docker.properties
@@ -12,3 +12,6 @@ spring.kafka.consumer.group-id=notificationId
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.type.mapping=event:pl.amilosh.notificationservice.event.OrderSavedEvent
+
+# Spring Boot Actuator
+management.endpoints.web.exposure.include=prometheus
